# Group-Project

./: .flake8  .gitignore  Random_Forest-2.ipynb  app.js  archivetempsupermarket_churnData.csv  churn.py  customer-int.css  customer-int.html  dashboard.html  dashboard.js  environment.yml  index.html  load-data.css  loggin.html  machine-learning.html  new-client.html  pyproject.toml  script.js  signup.html  styles1.css  test_churn.py  trial1.js
home page/: log-index.html  new-client.html  styles.css
loggin/: app.js  dashboard.html  dashboard.js  homePage.html  load-data.html  machine-learning.css  machine-learning.html  prediction.html  prediction.js  recomandation.html  script.js  trial.html  trial1.js
new_venv/: pyvenv.cfg
