[tool.poetry]
name = "customer churn"  
version = "0.1.0"
description = ""
authors = ["group 11 "]
packages = [{ include = "churn" }] 

[tool.poetry.dependencies]
python = "^3.10"
# Add other dependencies here, e.g.:
flask = "^2.0"
flask-cors = "^5.0.0"
pandas = "^1.5" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
